// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 1`] = `
{
  "1": {
    "T": 2,
    "W": 3,
    "_createdAt": 123456789,
    "_isEvaluating": false,
    "_stateType": 2,
    "_subscription": {
      "unsubscribe": [Function],
    },
    "dispatch": [Function],
    "id": "1",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "no-1" => {
        "callback": [Function],
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "p": [],
    "s": Map {
      "@@selector-common-name-0" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "setState": [Function],
    "setStateDeep": [Function],
    "store": {
      "_isDispatching": false,
      "_isSolo": true,
      "_state": 3,
      "_subscribers": [
        {
          "next": [Function],
        },
      ],
      "dispatch": [Function],
      "setState": [Function],
    },
    "t": AtomTemplate {
      "_config": {
        "ttl": 0,
      },
      "_value": [Function],
      "key": "1",
      "ttl": 0,
    },
    "w": [],
  },
  "@@selector-common-name-0": {
    "T": 2,
    "W": 2,
    "id": "@@selector-common-name-0",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "p": [],
    "s": Map {
      "root" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "t": [Function],
    "v": 3,
    "w": [],
  },
  "root": {
    "T": 2,
    "W": 1,
    "_createdAt": 123456789,
    "_isEvaluating": false,
    "_stateType": 2,
    "_subscription": {
      "unsubscribe": [Function],
    },
    "dispatch": [Function],
    "id": "root",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "@@selector-common-name-0" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "p": [],
    "s": Map {},
    "setState": [Function],
    "setStateDeep": [Function],
    "store": {
      "_isDispatching": false,
      "_isSolo": true,
      "_state": 1,
      "_subscribers": [
        {
          "next": [Function],
        },
      ],
      "dispatch": [Function],
      "setState": [Function],
    },
    "t": AtomTemplate {
      "_config": {
        "ttl": 0,
      },
      "_value": [Function],
      "key": "root",
      "ttl": 0,
    },
    "w": [],
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 2`] = `
{
  "2": {
    "T": 2,
    "W": 3,
    "_createdAt": 123456789,
    "_isEvaluating": false,
    "_stateType": 2,
    "_subscription": {
      "unsubscribe": [Function],
    },
    "dispatch": [Function],
    "id": "2",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "no-3" => {
        "callback": [Function],
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "p": [],
    "s": Map {
      "@@selector-common-name-2" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "setState": [Function],
    "setStateDeep": [Function],
    "store": {
      "_isDispatching": false,
      "_isSolo": true,
      "_state": 4,
      "_subscribers": [
        {
          "next": [Function],
        },
      ],
      "dispatch": [Function],
      "setState": [Function],
    },
    "t": IonTemplate {
      "_config": {
        "ttl": 0,
      },
      "_get": [Function],
      "_value": [Function],
      "key": "2",
      "ttl": 0,
    },
    "w": [],
  },
  "@@selector-common-name-2": {
    "T": 2,
    "W": 2,
    "id": "@@selector-common-name-2",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "2" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "p": [],
    "s": Map {
      "root" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "t": [Function],
    "v": 4,
    "w": [],
  },
  "root": {
    "T": 2,
    "W": 1,
    "_createdAt": 123456789,
    "_isEvaluating": false,
    "_stateType": 2,
    "_subscription": {
      "unsubscribe": [Function],
    },
    "dispatch": [Function],
    "id": "root",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "@@selector-common-name-2" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "p": [],
    "s": Map {},
    "setState": [Function],
    "setStateDeep": [Function],
    "store": {
      "_isDispatching": false,
      "_isSolo": true,
      "_state": 1,
      "_subscribers": [
        {
          "next": [Function],
        },
      ],
      "dispatch": [Function],
      "setState": [Function],
    },
    "t": AtomTemplate {
      "_config": {
        "ttl": 0,
      },
      "_value": [Function],
      "key": "root",
      "ttl": 0,
    },
    "w": [],
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 3`] = `
{
  "1": {
    "T": 2,
    "W": 3,
    "_createdAt": 123456789,
    "_isEvaluating": false,
    "_stateType": 2,
    "_subscription": {
      "unsubscribe": [Function],
    },
    "dispatch": [Function],
    "id": "1",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "no-4" => {
        "callback": [Function],
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "p": [],
    "s": Map {
      "@@selector-common-name-0" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "setState": [Function],
    "setStateDeep": [Function],
    "store": {
      "_isDispatching": false,
      "_isSolo": true,
      "_state": 3,
      "_subscribers": [
        {
          "next": [Function],
        },
      ],
      "dispatch": [Function],
      "setState": [Function],
    },
    "t": AtomTemplate {
      "_config": {
        "ttl": 0,
      },
      "_value": [Function],
      "key": "1",
      "ttl": 0,
    },
    "w": [],
  },
  "2": {
    "T": 2,
    "W": 3,
    "_createdAt": 123456789,
    "_isEvaluating": false,
    "_stateType": 2,
    "_subscription": {
      "unsubscribe": [Function],
    },
    "dispatch": [Function],
    "id": "2",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "no-3" => {
        "callback": [Function],
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "p": [],
    "s": Map {
      "@@selector-common-name-2" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "setState": [Function],
    "setStateDeep": [Function],
    "store": {
      "_isDispatching": false,
      "_isSolo": true,
      "_state": 4,
      "_subscribers": [
        {
          "next": [Function],
        },
      ],
      "dispatch": [Function],
      "setState": [Function],
    },
    "t": IonTemplate {
      "_config": {
        "ttl": 0,
      },
      "_get": [Function],
      "_value": [Function],
      "key": "2",
      "ttl": 0,
    },
    "w": [],
  },
  "@@selector-common-name-0": {
    "T": 2,
    "W": 2,
    "id": "@@selector-common-name-0",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "p": [],
    "s": Map {
      "root" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "t": [Function],
    "v": 3,
    "w": [],
  },
  "@@selector-common-name-2": {
    "T": 2,
    "W": 2,
    "id": "@@selector-common-name-2",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "2" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "p": [],
    "s": Map {
      "root" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "t": [Function],
    "v": 4,
    "w": [],
  },
  "root": {
    "T": 2,
    "W": 1,
    "_createdAt": 123456789,
    "_isEvaluating": false,
    "_stateType": 2,
    "_subscription": {
      "unsubscribe": [Function],
    },
    "dispatch": [Function],
    "id": "root",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "@@selector-common-name-2" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
      "@@selector-common-name-0" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "p": [],
    "s": Map {},
    "setState": [Function],
    "setStateDeep": [Function],
    "store": {
      "_isDispatching": false,
      "_isSolo": true,
      "_state": 1,
      "_subscribers": [
        {
          "next": [Function],
        },
      ],
      "dispatch": [Function],
      "setState": [Function],
    },
    "t": AtomTemplate {
      "_config": {
        "ttl": 0,
      },
      "_value": [Function],
      "key": "root",
      "ttl": 0,
    },
    "w": [],
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 4`] = `
{
  "1": {
    "T": 2,
    "W": 3,
    "_createdAt": 123456789,
    "_isEvaluating": false,
    "_stateType": 2,
    "_subscription": {
      "unsubscribe": [Function],
    },
    "dispatch": [Function],
    "id": "1",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "no-4" => {
        "callback": [Function],
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "p": [],
    "s": Map {
      "@@selector-common-name-0" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "setState": [Function],
    "setStateDeep": [Function],
    "store": {
      "_isDispatching": false,
      "_isSolo": true,
      "_state": 3,
      "_subscribers": [
        {
          "next": [Function],
        },
      ],
      "dispatch": [Function],
      "setState": [Function],
    },
    "t": AtomTemplate {
      "_config": {
        "ttl": 0,
      },
      "_value": [Function],
      "key": "1",
      "ttl": 0,
    },
    "w": [],
  },
  "@@selector-common-name-0": {
    "T": 2,
    "W": 2,
    "id": "@@selector-common-name-0",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "1" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "p": [],
    "s": Map {
      "root" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "t": [Function],
    "v": 3,
    "w": [],
  },
  "root": {
    "T": 2,
    "W": 1,
    "_createdAt": 123456789,
    "_isEvaluating": false,
    "_stateType": 2,
    "_subscription": {
      "unsubscribe": [Function],
    },
    "dispatch": [Function],
    "id": "root",
    "isZeduxNode": true,
    "l": "Active",
    "o": Map {
      "@@selector-common-name-0" => {
        "callback": undefined,
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "p": [],
    "s": Map {},
    "setState": [Function],
    "setStateDeep": [Function],
    "store": {
      "_isDispatching": false,
      "_isSolo": true,
      "_state": 1,
      "_subscribers": [
        {
          "next": [Function],
        },
      ],
      "dispatch": [Function],
      "setState": [Function],
    },
    "t": AtomTemplate {
      "_config": {
        "ttl": 0,
      },
      "_value": [Function],
      "key": "root",
      "ttl": 0,
    },
    "w": [],
  },
}
`;
